MAINTAINERCLEANFILES = Makefile.in

EDJE_CC = edje_cc

EDJE_FLAGS = \
-id $(top_srcdir)/data/themes/default/images \
-id $(top_srcdir)/data/themes/default/images/buttons \
-id $(top_srcdir)/data/themes/default/images/parts \
-id $(top_srcdir)/data/themes/default/images/icons \
-id $(top_srcdir)/data/themes/default/images/logo \
-id $(top_srcdir)/data/themes/default/images/animations \
-id $(top_srcdir)/data/themes/default/images/animations/glowed_556_line \
-id $(top_srcdir)/data/themes/default/images/animations/room_touched \
-id $(top_srcdir)/data/themes/default/images/animations/round_button \
-id $(top_srcdir)/data/themes/default/images/animations/light_icon \
-id $(top_srcdir)/data/themes/default/images/animations/shutter_icon \
-id $(top_srcdir)/data/themes/default/images/animations/scenario_icon \
-id $(top_srcdir)/data/themes/default/images/animations/mini_circular_cooldown \
-id $(top_srcdir)/data/themes/default/images/animations/micro_circular_cooldown \
-id $(top_srcdir)/data/themes/default/images/animations/cd_player \
-id $(top_srcdir)/data/themes/default/images/animations/bootsplash_logo \
-id $(top_srcdir)/data/themes/default/images/animations/bootsplash_logo_reflect \
-id $(top_srcdir)/data/themes/default/images/animations/bootsplash_notification_icone \
-id $(top_srcdir)/data/themes/default/images/animations/tor_icon \
-id $(top_srcdir)/data/themes/default/images/animations/volume_knob_leds \
-id $(top_srcdir)/data/themes/default/images/boosplash \
-id $(top_srcdir)/data/themes/default/images/adjust_pattern \
-id $(top_srcdir)/data/themes/default/images/background \
-id $(top_srcdir)/data/themes/default/images/scenario \
-id $(top_srcdir)/data/themes/default/images/rooms \
-id $(top_srcdir)/data/themes/default/images/rooms/lounge \
-id $(top_srcdir)/data/themes/default/images/rooms/bedroom \
-id $(top_srcdir)/data/themes/default/images/rooms/kitchen \
-id $(top_srcdir)/data/themes/default/images/rooms/office \
-id $(top_srcdir)/data/themes/default/images/rooms/diningroom \
-id $(top_srcdir)/data/themes/default/images/rooms/various \
-id $(top_srcdir)/data/themes/default/images/rooms/outside \
-id $(top_srcdir)/data/themes/default/images/rooms/bathroom \
-id $(top_srcdir)/data/themes/default/images/rooms/corridor \
-id $(top_srcdir)/data/themes/default/images/rooms/cellar \
-id $(top_srcdir)/data/themes/default/images/rooms/garage \
-id $(top_srcdir)/data/themes/default/images/widgets \
-fd $(top_srcdir)/data/themes/default/fonts

EDJE_VERB = $(EDJE_VERB_$(V))
EDJE_VERB_ = $(EDJE_VERB_$(AM_DEFAULT_VERBOSITY))
EDJE_VERB_1 = -v

defaultdir = $(pkgdatadir)

default_DATA = default.edj

IMG = \
images/buttons/button_list_up_glow.png					\
images/buttons/button_previous_glow.png					\
images/buttons/button_action_reboot_off.png				\
images/buttons/button_action_reload.png					\
images/buttons/button_action_scenario_play.png				\
images/buttons/button_action_popup_glow.png				\
images/buttons/button_widget_move_right.png				\
images/buttons/button_action_labeled.png				\
images/buttons/button_home_glow.png					\
images/buttons/button_rot_right_glow.png				\
images/buttons/button_scenarios.png					\
images/buttons/button_action_toggle.png					\
images/buttons/button_widget_list_end.png				\
images/buttons/button_rot_zoomout.png					\
images/buttons/button_action_select_unselected.png			\
images/buttons/button_rot_up_glow.png					\
images/buttons/button_scenarios_stop.png				\
images/buttons/button_action_on.png					\
images/buttons/button_action_pager_previous.png				\
images/buttons/button_action_fullscreen.png				\
images/buttons/button_home_bloom.png					\
images/buttons/button_down.png						\
images/buttons/button_action_left.png					\
images/buttons/button_scroll_glow.png					\
images/buttons/button_widget_move_left.png				\
images/buttons/button_previous.png					\
images/buttons/button_action_reboot.png					\
images/buttons/button_next.png						\
images/buttons/button_action_del_off.png				\
images/buttons/button_browser_glow.png					\
images/buttons/button_action_warming_up_glow.png			\
images/buttons/button_action_warming_up.png				\
images/buttons/button_action_on_glow.png				\
images/buttons/button_home_stop_on.png					\
images/buttons/button_action_glow_small.png				\
images/buttons/button_rot_centre_glow.png				\
images/buttons/button_rot_centre.png					\
images/buttons/menu_item.png						\
images/buttons/button_scenarios_glow.png				\
images/buttons/button_action_quit_off.png				\
images/buttons/button_configuration.png					\
images/buttons/button_rot_zoomout_glow.png				\
images/buttons/button_selected_neon.png					\
images/buttons/button_action_pager_next.png				\
images/buttons/button_action_labeled_small.png				\
images/buttons/button_action_plus_off.png				\
images/buttons/button_action_editor_glow.png				\
images/buttons/button_action_small_glow.png				\
images/buttons/button_home.png						\
images/buttons/button_element.png					\
images/buttons/button_list_down.png					\
images/buttons/button_configuration_bloom.png				\
images/buttons/button_action_big_glow.png				\
images/buttons/button_action_popup_valid.png				\
images/buttons/button_media_stop_on.png					\
images/buttons/button_action_back.png					\
images/buttons/button_configuration_stop_on.png				\
images/buttons/button_widget_move_left_big.png				\
images/buttons/button_action_neon.png					\
images/buttons/button_action_vertical_glow.png				\
images/buttons/button_rot_left.png					\
images/buttons/button_element_bevel.png					\
images/buttons/button_glow_down.png					\
images/buttons/button_widget_resize.png					\
images/buttons/button_scenarios_stop_on.png				\
images/buttons/button_action_clavier2.png				\
images/buttons/button_configuration_stop.png				\
images/buttons/button_element_cut_glow.png				\
images/buttons/button_home_stop.png					\
images/buttons/button_scenarios_bloom.png				\
images/buttons/button_action_glow.png					\
images/buttons/button_glow_up.png					\
images/buttons/button_media_glow.png					\
images/buttons/button_action_pause.png					\
images/buttons/button_rot_right.png					\
images/buttons/button_scroll.png					\
images/buttons/button_action_light_off.png				\
images/buttons/button_action_scenario_play_glow.png			\
images/buttons/button_widget_move_up.png				\
images/buttons/button_action_clavier_off.png				\
images/buttons/button_action_valid_off.png				\
images/buttons/button_feature_small.png					\
images/buttons/button_action_off.png					\
images/buttons/button_rot_down_glow.png					\
images/buttons/button_key_del.png					\
images/buttons/button_browser.png					\
images/buttons/button_action_impulse_glow.png				\
images/buttons/button_action_edit.png					\
images/buttons/button_action_rolll_up.png				\
images/buttons/button_action_small.png					\
images/buttons/button_media_bloom.png					\
images/buttons/button_action_quit.png					\
images/buttons/button_action_upper.png					\
images/buttons/menu_item_select2.png					\
images/buttons/button_action_del.png					\
images/buttons/button_action_home.png					\
images/buttons/button_action_actionstop_off.png				\
images/buttons/button_rot_down.png					\
images/buttons/button_slider_less.png					\
images/buttons/button_slider_more.png					\
images/buttons/button_action_less_vertical.png				\
images/buttons/button_rot_zoomin.png					\
images/buttons/button_rot_zoomin_glow.png				\
images/buttons/button_action_big.png					\
images/buttons/button_action_fullscreen_glow.png			\
images/buttons/button_previous_off.png					\
images/buttons/button_widget_list_begin.png				\
images/buttons/button_rot_up.png					\
images/buttons/button_action_downer.png					\
images/buttons/button_action_impulse.png				\
images/buttons/button_action_less.png					\
images/buttons/button_media_stop.png					\
images/buttons/button_keyboard_select.png				\
images/buttons/button_action_right.png					\
images/buttons/button_action_up.png					\
images/buttons/button_action_more.png					\
images/buttons/button_next_off.png					\
images/buttons/button_action_rolll_down.png				\
images/buttons/button_action_sync.png					\
images/buttons/button_media.png						\
images/buttons/button_next_glow.png					\
images/buttons/button_action_more_vertical.png				\
images/buttons/button_up.png						\
images/buttons/button_element_open.png					\
images/buttons/button_action_popup_back_glow.png			\
images/buttons/button_element_glow.png					\
images/buttons/button_action_valid.png					\
images/buttons/button_info.png						\
images/buttons/button_action_popup_back.png				\
images/buttons/button_widget_move_up_big.png				\
images/buttons/button_keyboard.png					\
images/buttons/button_action_plus.png					\
images/buttons/button_action_light_on.png				\
images/buttons/button_widget_move_down_big.png				\
images/buttons/button_action_previous.png				\
images/buttons/button_configuration_glow.png				\
images/buttons/button_action_impulse_up.png				\
images/buttons/button_action_pattern.png				\
images/buttons/button_round_stop.png					\
images/buttons/button_list_up.png					\
images/buttons/button_list_down_glow.png				\
images/buttons/button_action_labeled_glow.png				\
images/buttons/button_action_border.png					\
images/buttons/button_action_stop.png					\
images/buttons/button_action_play.png					\
images/buttons/button_widget_move_right_big.png				\
images/buttons/button_action_actionstop.png				\
images/buttons/button_action_next.png					\
images/buttons/button_widget_list_item.png				\
images/buttons/button_action_clavier.png				\
images/buttons/button_action_select_selected.png			\
images/buttons/button_widget_move_down.png				\
images/buttons/button_element_cut.png					\
images/buttons/button_action_down.png					\
images/buttons/button_rot_left_glow.png					\
images/buttons/button_action_impulse_down.png				\
images/buttons/menu_item_select.png					\
images/buttons/button_feature_big.png					\
images/buttons/button_action_warming_down.png				\
images/buttons/button_key_return.png					\
images/buttons/button_info_glow.png					\
images/buttons/button_action_editor.png					\
images/buttons/button_action_delete.png					\
images/progressbar/progressbar_background.png				\
images/progressbar/progressbar_niveau.png				\
images/progressbar/progressbar_ligne.png				\
images/adjust_pattern/elements_light.png				\
images/adjust_pattern/normal_room_bg.png				\
images/adjust_pattern/big_room_bg.png					\
images/adjust_pattern/elements.png					\
images/adjust_pattern/cover.png						\
images/adjust_pattern/elements_track.png				\
images/adjust_pattern/player.png					\
images/adjust_pattern/small_room_bg.png					\
images/widgets/widget_container_back_buttons.png			\
images/widgets/widget_back_edit.png					\
images/widgets/xmas_banner_right.png					\
images/widgets/flake_large.png						\
images/widgets/widget_container_back.png				\
images/widgets/flake_small.png						\
images/widgets/xmas_banner_left.png					\
images/widgets/flake_medium.png						\
images/parts/config_item.png						\
images/parts/slider_green.png						\
images/parts/footer_shadow.png						\
images/parts/loading_top.png						\
images/parts/menu_glowed_neon.png					\
images/parts/menu_media_item_separator.png				\
images/parts/slider_vertical.png					\
images/parts/camera_big_border.png					\
images/parts/module_footer_shadow.png					\
images/parts/player_line_decoration_top.png				\
images/parts/dialog_neon.png						\
images/parts/selector_on.png						\
images/parts/browser_list_decoration.png				\
images/parts/camera_border.png						\
images/parts/module_header_shadow.png					\
images/parts/keyboard_select_bar_right.png				\
images/parts/menu_media_icon_eskiss_back.png				\
images/parts/player_small_shadow.png					\
images/parts/calendar_back.png						\
images/parts/glow.png							\
images/parts/medium_list_decoration_left.png				\
images/parts/player_cover_front.png					\
images/parts/dialog_lines.png						\
images/parts/player_line_decoration_bottom.png				\
images/parts/slider_on.png						\
images/parts/calendar_holiday.png					\
images/parts/menu_back.png						\
images/parts/loading_bar.png						\
images/parts/slider_border_red.png					\
images/parts/calendar_select.png					\
images/parts/controls_sep.png						\
images/parts/keyboard_agenda_background.png				\
images/parts/slider_green_on.png					\
images/parts/menu_media_icon_web_back.png				\
images/parts/keyboard_select_separator.png				\
images/parts/window_border2.png						\
images/parts/shutter_arrows_deco.png					\
images/parts/volume_knob_move.png					\
images/parts/keyboard_cursor.png					\
images/parts/keyboard_select_bar_left.png				\
images/parts/shadow_photo.png						\
images/parts/menu_header_shadow.png					\
images/parts/slider_vertical_on.png					\
images/parts/middle_skyline.png						\
images/parts/keyboard_lines.png						\
images/parts/album_back.png						\
images/parts/top_skyline.png						\
images/parts/indicator_glow.png						\
images/parts/player_line_decoration_right.png				\
images/parts/top_skyline_neon.png					\
images/parts/player_glow.png						\
images/parts/vertical_level_indicator.png				\
images/parts/slider_red_on.png						\
images/parts/popup_arrow_down.png					\
images/parts/slider_border_green.png					\
images/parts/slider_border.png						\
images/parts/medium_list_decoration_right.png				\
images/parts/menu_media_icon_cd_back.png				\
images/parts/keyboard_key_glow.png					\
images/parts/standard_list_decoration_top.png				\
images/parts/slider_border_blue.png					\
images/parts/player_small_cover_back.png				\
images/parts/calendar_header.png					\
images/parts/standard_list_decoration_bottom.png			\
images/parts/slider_blue.png						\
images/parts/calendar_ring.png						\
images/parts/keyboard_key_selected.png					\
images/parts/player_cover_back.png					\
images/parts/keyboard_multiline_background.png				\
images/parts/selector_off.png						\
images/parts/menu_media_item_glow.png					\
images/parts/footer_kevlar.png						\
images/parts/popup_arrow_left.png					\
images/parts/camera_reflect.png						\
images/parts/menu_buttons_shadow_left.png				\
images/parts/list_message_border.png					\
images/parts/small_list_decoration.png					\
images/parts/player_line_decoration_cd.png				\
images/parts/medium_list_decoration_camera.png				\
images/parts/player_line_decoration_left.png				\
images/parts/camera_mire.png						\
images/parts/controls_bg.png						\
images/parts/menu_buttons_shadow_right.png				\
images/parts/slider_blue_on.png						\
images/parts/menu_media_item_shadow.png					\
images/parts/display_border.png						\
images/parts/menu_media_item_reflect.png				\
images/parts/popup_arrow_right.png					\
images/parts/menu_media_icon_camera_red.png				\
images/parts/cover_loading_border.png					\
images/parts/display_border2.png					\
images/parts/cursor.png							\
images/parts/small_scroll_list_decoration.png				\
images/parts/standard_list_decoration.png				\
images/parts/medium_scroll_list_decoration.png				\
images/parts/menu_media_item.png					\
images/parts/scenario_separator.png					\
images/parts/camera_medium_border.png					\
images/parts/popup_carbon.png						\
images/parts/separator.png						\
images/parts/menu_media_icon_camera_back.png				\
images/parts/player_small_cover_front.png				\
images/parts/keyboard_background.png					\
images/parts/volume_knob_ledsoff.png					\
images/parts/rgb_preview.png						\
images/parts/config_item_select.png					\
images/parts/popup_arrow_up.png						\
images/parts/menu_footer_shadow.png					\
images/parts/middle_skyline_neon.png					\
images/parts/dialog_background.png					\
images/parts/window_border.png						\
images/parts/popup_bg.png						\
images/parts/slider_red.png						\
images/parts/loading_bg.png						\
images/parts/player_shadow.png						\
images/parts/volume_knob.png						\
images/parts/window_shutter.png						\
images/parts/imageviewer_footer.png					\
images/parts/player_cd_shadow.png					\
images/parts/scenario_list_decoration.png				\
images/parts/slider.png							\
images/parts/camera_nocam.png						\
images/parts/album_cover.png						\
images/parts/small_list_decoration_left.png				\
images/parts/slider_border_vertical.png					\
images/parts/cover_border.png						\
images/bootsplash/neonlight.png						\
images/scenario/wizzard_4.png						\
images/scenario/wizzard_header.png					\
images/scenario/wizzard_3.png						\
images/scenario/wizzard_line_selected.png				\
images/scenario/wizzard_bg_selected.png					\
images/scenario/wizzard_1.png						\
images/scenario/wizzard_2.png						\
images/background/menu_footer_background_left.png			\
images/background/bootsplash.png					\
images/background/background_top.png					\
images/background/background_default_lighted.png			\
images/background/background_quad.png					\
images/background/background_bottom.png					\
images/background/module_footer.png					\
images/background/menu_header_background_version.png			\
images/background/background_default.png				\
images/background/menu_header_background.png				\
images/background/menu_footer_background.png				\
images/background/module_header.png					\
images/background/menu_footer_background_right.png			\
images/background/background_center.png					\
images/download_manager/download_disk.png				\
images/download_manager/download_shadow.png				\
images/download_manager/download_arrow.png				\
images/download_manager/download_fond.png				\
images/logo/final.png							\
images/logo/shadow.png							\
images/logo/logo_tittle.png						\
images/logo/calaos_about_logo.png					\
images/logo/menu_logo.png						\
images/logo/logo_mirror.png						\
images/logo/bloom.png							\
images/icons/icon_select_simple.png					\
images/icons/icon_groom.png						\
images/icons/icon_player.png						\
images/icons/icon_play.png						\
images/icons/icon_edit.png						\
images/icons/icon_analog.png						\
images/icons/icon_light_on.png						\
images/icons/icon_item_widget.png					\
images/icons/icon_scenario_big.png					\
images/icons/icon_item_screensaver.png					\
images/icons/icon_tor_on.png						\
images/icons/icon_config_widget.png					\
images/icons/icon_cd.png						\
images/icons/icon_cd_glow.png						\
images/icons/icon_string.png						\
images/icons/icon_plus.png						\
images/icons/icon_camera_on.png						\
images/icons/icon_config_info.png					\
images/icons/icon_camera.png						\
images/icons/icon_action.png						\
images/icons/icon_clock.png						\
images/icons/icon_light_simple.png					\
images/icons/icon_warming_up.png					\
images/icons/icon_sound.png						\
images/icons/icon_search.png						\
images/icons/icon_config_veille.png					\
images/icons/icon_temp.png						\
images/icons/icon_folder.png						\
images/icons/icon_myhome.png						\
images/icons/icon_room_on.png						\
images/icons/icon_disclosure.png					\
images/icons/icon_scenario_small.png					\
images/icons/icon_music.png						\
images/icons/icon_camera_title.png					\
images/icons/icon_action_simple.png					\
images/icons/icon_flickr.png						\
images/icons/icon_config_terminal.png					\
images/icons/icon_config_fw.png						\
images/icons/icon_bool_on.png						\
images/icons/icon_bool.png						\
images/icons/icon_int.png						\
images/icons/icon_light_off.png						\
images/icons/icon_play_simple.png					\
images/icons/icon_room.png						\
images/icons/icon_bool_scenario.png					\
images/icons/icon_config_l18n.png					\
images/icons/icon_config_clock.png					\
images/icons/icon_warming.png						\
images/icons/icon_stop_simple.png					\
images/icons/icon_action_blue.png					\
images/icons/icon_trash.png						\
images/icons/icon_camera_simple.png					\
images/icons/icon_warming_down.png					\
images/icons/icon_config_network.png					\
images/icons/icon_item_lock.png						\
images/icons/icon_light.png						\
images/icons/icon_playlist.png						\
images/icons/icon_note.png						\
images/icons/icon_config_security.png					\
images/icons/icon_item_reboot.png					\
images/icons/icon_tor.png						\
images/icons/icon_widget_unknown.png					\
images/icons/icon_shutter_on.png					\
images/icons/icon_note_on.png						\
images/icons/icon_shutter.png						\
images/icons/icon_moins.png						\
images/icons/icon_radio.png						\
images/animations/bootsplash_logo/0028.png				\
images/animations/bootsplash_logo/0002.png				\
images/animations/bootsplash_logo/0047.png				\
images/animations/bootsplash_logo/0006.png				\
images/animations/bootsplash_logo/0043.png				\
images/animations/bootsplash_logo/0021.png				\
images/animations/bootsplash_logo/0040.png				\
images/animations/bootsplash_logo/0056.png				\
images/animations/bootsplash_logo/0024.png				\
images/animations/bootsplash_logo/0053.png				\
images/animations/bootsplash_logo/0054.png				\
images/animations/bootsplash_logo/0012.png				\
images/animations/bootsplash_logo/0063.png				\
images/animations/bootsplash_logo/0051.png				\
images/animations/bootsplash_logo/0061.png				\
images/animations/bootsplash_logo/0031.png				\
images/animations/bootsplash_logo/0013.png				\
images/animations/bootsplash_logo/0019.png				\
images/animations/bootsplash_logo/0009.png				\
images/animations/bootsplash_logo/0060.png				\
images/animations/bootsplash_logo/0064.png				\
images/animations/bootsplash_logo/0001.png				\
images/animations/bootsplash_logo/0045.png				\
images/animations/bootsplash_logo/0033.png				\
images/animations/bootsplash_logo/0017.png				\
images/animations/bootsplash_logo/0029.png				\
images/animations/bootsplash_logo/0059.png				\
images/animations/bootsplash_logo/0057.png				\
images/animations/bootsplash_logo/0037.png				\
images/animations/bootsplash_logo/0039.png				\
images/animations/bootsplash_logo/0065.png				\
images/animations/bootsplash_logo/0014.png				\
images/animations/bootsplash_logo/0015.png				\
images/animations/bootsplash_logo/0003.png				\
images/animations/bootsplash_logo/0010.png				\
images/animations/bootsplash_logo/0050.png				\
images/animations/bootsplash_logo/0011.png				\
images/animations/bootsplash_logo/0008.png				\
images/animations/bootsplash_logo/0007.png				\
images/animations/bootsplash_logo/0038.png				\
images/animations/bootsplash_logo/0049.png				\
images/animations/bootsplash_logo/0058.png				\
images/animations/bootsplash_logo/0048.png				\
images/animations/bootsplash_logo/0035.png				\
images/animations/bootsplash_logo/0062.png				\
images/animations/bootsplash_logo/0005.png				\
images/animations/bootsplash_logo/0032.png				\
images/animations/bootsplash_logo/0027.png				\
images/animations/bootsplash_logo/0055.png				\
images/animations/bootsplash_logo/0025.png				\
images/animations/bootsplash_logo/0026.png				\
images/animations/bootsplash_logo/0052.png				\
images/animations/bootsplash_logo/0030.png				\
images/animations/bootsplash_logo/0036.png				\
images/animations/bootsplash_logo/0022.png				\
images/animations/bootsplash_logo/0020.png				\
images/animations/bootsplash_logo/0044.png				\
images/animations/bootsplash_logo/0046.png				\
images/animations/bootsplash_logo/0016.png				\
images/animations/bootsplash_logo/0042.png				\
images/animations/bootsplash_logo/0004.png				\
images/animations/bootsplash_logo/0041.png				\
images/animations/bootsplash_logo/0034.png				\
images/animations/bootsplash_logo/0018.png				\
images/animations/bootsplash_logo/0023.png				\
images/animations/shutter_icon/icon_shutter_000.png			\
images/animations/shutter_icon/icon_shutter_002.png			\
images/animations/shutter_icon/icon_shutter_006.png			\
images/animations/shutter_icon/icon_shutter_005.png			\
images/animations/shutter_icon/icon_shutter_001.png			\
images/animations/shutter_icon/icon_shutter_008.png			\
images/animations/shutter_icon/icon_shutter_007.png			\
images/animations/shutter_icon/icon_shutter_003.png			\
images/animations/shutter_icon/icon_shutter_009.png			\
images/animations/shutter_icon/icon_shutter_004.png			\
images/animations/round_button/round_button_006.png			\
images/animations/round_button/round_button_001.png			\
images/animations/round_button/round_button_010.png			\
images/animations/round_button/round_button_007.png			\
images/animations/round_button/round_button_009.png			\
images/animations/round_button/round_button_003.png			\
images/animations/round_button/round_button_002.png			\
images/animations/round_button/round_button_005.png			\
images/animations/round_button/round_button_008.png			\
images/animations/round_button/round_button_004.png			\
images/animations/tor_icon/icon_tor_003.png				\
images/animations/tor_icon/icon_tor_006.png				\
images/animations/tor_icon/icon_tor_001.png				\
images/animations/tor_icon/icon_tor_007.png				\
images/animations/tor_icon/icon_tor_000.png				\
images/animations/tor_icon/icon_tor_002.png				\
images/animations/tor_icon/icon_tor_004.png				\
images/animations/tor_icon/icon_tor_005.png				\
images/animations/tor_icon/icon_tor_008.png				\
images/animations/light_icon/icon_light_004.png				\
images/animations/light_icon/icon_light_009.png				\
images/animations/light_icon/icon_light_008.png				\
images/animations/light_icon/icon_light_003.png				\
images/animations/light_icon/icon_light_001.png				\
images/animations/light_icon/icon_light_002.png				\
images/animations/light_icon/icon_light_005.png				\
images/animations/light_icon/icon_light_007.png				\
images/animations/light_icon/icon_light_006.png				\
images/animations/mini_circular_cooldown/mini_circular_015.png		\
images/animations/mini_circular_cooldown/mini_circular_004.png		\
images/animations/mini_circular_cooldown/mini_circular_013.png		\
images/animations/mini_circular_cooldown/mini_circular_008.png		\
images/animations/mini_circular_cooldown/mini_circular_009.png		\
images/animations/mini_circular_cooldown/mini_circular_012.png		\
images/animations/mini_circular_cooldown/mini_circular_000.png		\
images/animations/mini_circular_cooldown/mini_circular_011.png		\
images/animations/mini_circular_cooldown/mini_circular_005.png		\
images/animations/mini_circular_cooldown/mini_circular_007.png		\
images/animations/mini_circular_cooldown/mini_circular_017.png		\
images/animations/mini_circular_cooldown/mini_circular_003.png		\
images/animations/mini_circular_cooldown/mini_circular_002.png		\
images/animations/mini_circular_cooldown/mini_circular_006.png		\
images/animations/mini_circular_cooldown/mini_circular_001.png		\
images/animations/mini_circular_cooldown/mini_circular_016.png		\
images/animations/mini_circular_cooldown/mini_circular_014.png		\
images/animations/mini_circular_cooldown/mini_circular_010.png		\
images/animations/room_touched/medium_room_touched_001.png		\
images/animations/room_touched/medium_room_touched_003.png		\
images/animations/room_touched/medium_room_touched_002.png		\
images/animations/cd_player/menu_media_icon_cd_01.png			\
images/animations/cd_player/cd_player_007.png				\
images/animations/cd_player/cd_player_003.png				\
images/animations/cd_player/menu_media_icon_cd_06.png			\
images/animations/cd_player/menu_media_icon_cd_07.png			\
images/animations/cd_player/menu_media_icon_cd_09.png			\
images/animations/cd_player/cd_player_006.png				\
images/animations/cd_player/mini_cd_player_001.png			\
images/animations/cd_player/menu_media_icon_cd_02.png			\
images/animations/cd_player/cd_player_008.png				\
images/animations/cd_player/menu_media_icon_cd_05.png			\
images/animations/cd_player/menu_media_icon_cd_04.png			\
images/animations/cd_player/cd_player_001.png				\
images/animations/cd_player/cd_player_002.png				\
images/animations/cd_player/cd_player_004.png				\
images/animations/cd_player/menu_media_icon_cd_03.png			\
images/animations/cd_player/cd_player_005.png				\
images/animations/cd_player/cd_player_009.png				\
images/animations/cd_player/menu_media_icon_cd_08.png			\
images/animations/scenario_icon/icon_scenario_035.png			\
images/animations/scenario_icon/icon_scenario_029.png			\
images/animations/scenario_icon/icon_scenario_011.png			\
images/animations/scenario_icon/icon_scenario_006.png			\
images/animations/scenario_icon/icon_scenario_027.png			\
images/animations/scenario_icon/icon_scenario_013.png			\
images/animations/scenario_icon/icon_scenario_009.png			\
images/animations/scenario_icon/icon_scenario_032.png			\
images/animations/scenario_icon/icon_scenario_038.png			\
images/animations/scenario_icon/icon_scenario_012.png			\
images/animations/scenario_icon/icon_scenario_019.png			\
images/animations/scenario_icon/icon_scenario_021.png			\
images/animations/scenario_icon/icon_scenario_015.png			\
images/animations/scenario_icon/icon_scenario_018.png			\
images/animations/scenario_icon/icon_scenario_025.png			\
images/animations/scenario_icon/icon_scenario_001.png			\
images/animations/scenario_icon/icon_scenario_024.png			\
images/animations/scenario_icon/icon_scenario_022.png			\
images/animations/scenario_icon/icon_scenario_008.png			\
images/animations/scenario_icon/icon_scenario_010.png			\
images/animations/scenario_icon/icon_scenario_004.png			\
images/animations/scenario_icon/icon_scenario_020.png			\
images/animations/scenario_icon/icon_scenario_036.png			\
images/animations/scenario_icon/icon_scenario_014.png			\
images/animations/scenario_icon/icon_scenario_028.png			\
images/animations/scenario_icon/icon_scenario_033.png			\
images/animations/scenario_icon/icon_scenario_023.png			\
images/animations/scenario_icon/icon_scenario_037.png			\
images/animations/scenario_icon/icon_scenario_040.png			\
images/animations/scenario_icon/icon_scenario_007.png			\
images/animations/scenario_icon/icon_scenario_002.png			\
images/animations/scenario_icon/icon_scenario_026.png			\
images/animations/scenario_icon/icon_scenario_030.png			\
images/animations/scenario_icon/icon_scenario_016.png			\
images/animations/scenario_icon/icon_scenario_039.png			\
images/animations/scenario_icon/icon_scenario_017.png			\
images/animations/scenario_icon/icon_scenario_034.png			\
images/animations/scenario_icon/icon_scenario_031.png			\
images/animations/scenario_icon/icon_scenario_005.png			\
images/animations/scenario_icon/icon_scenario_003.png			\
images/animations/bootsplash_logo_reflect/reflect_004.png		\
images/animations/bootsplash_logo_reflect/reflect_002.png		\
images/animations/bootsplash_logo_reflect/reflect_001.png		\
images/animations/bootsplash_logo_reflect/reflect_005.png		\
images/animations/bootsplash_logo_reflect/reflect_007.png		\
images/animations/bootsplash_logo_reflect/reflect_006.png		\
images/animations/bootsplash_logo_reflect/reflect_003.png		\
images/animations/bootsplash_notification_icone/loader_icon_0009.png	\
images/animations/bootsplash_notification_icone/loader_icon_0015.png	\
images/animations/bootsplash_notification_icone/loader_icon_0003.png	\
images/animations/bootsplash_notification_icone/loader_icon_0017.png	\
images/animations/bootsplash_notification_icone/loader_icon_0016.png	\
images/animations/bootsplash_notification_icone/loader_icon_0019.png	\
images/animations/bootsplash_notification_icone/loader_icon_0023.png	\
images/animations/bootsplash_notification_icone/loader_icon_0004.png	\
images/animations/bootsplash_notification_icone/loader_icon_0025.png	\
images/animations/bootsplash_notification_icone/loader_icon_0007.png	\
images/animations/bootsplash_notification_icone/loader_icon_0008.png	\
images/animations/bootsplash_notification_icone/loader_icon_0020.png	\
images/animations/bootsplash_notification_icone/loader_icon_0006.png	\
images/animations/bootsplash_notification_icone/loader_icon_0010.png	\
images/animations/bootsplash_notification_icone/loader_icon_0021.png	\
images/animations/bootsplash_notification_icone/loader_icon_0014.png	\
images/animations/bootsplash_notification_icone/loader_icon_0012.png	\
images/animations/bootsplash_notification_icone/loader_icon_0001.png	\
images/animations/bootsplash_notification_icone/loader_icon_0002.png	\
images/animations/bootsplash_notification_icone/loader_icon_bg.png	\
images/animations/bootsplash_notification_icone/loader_icon_0018.png	\
images/animations/bootsplash_notification_icone/loader_icon_0011.png	\
images/animations/bootsplash_notification_icone/loader_icon_0013.png	\
images/animations/bootsplash_notification_icone/loader_icon_0005.png	\
images/animations/bootsplash_notification_icone/loader_icon_0024.png	\
images/animations/bootsplash_notification_icone/loader_icon_0022.png	\
images/animations/micro_circular_cooldown/micro_circular_001.png	\
images/animations/micro_circular_cooldown/micro_circular_004.png	\
images/animations/micro_circular_cooldown/micro_circular_012.png	\
images/animations/micro_circular_cooldown/micro_circular_010.png	\
images/animations/micro_circular_cooldown/micro_circular_007.png	\
images/animations/micro_circular_cooldown/micro_circular_009.png	\
images/animations/micro_circular_cooldown/micro_circular_003.png	\
images/animations/micro_circular_cooldown/micro_circular_014.png	\
images/animations/micro_circular_cooldown/micro_circular_006.png	\
images/animations/micro_circular_cooldown/micro_circular_008.png	\
images/animations/micro_circular_cooldown/micro_circular_017.png	\
images/animations/micro_circular_cooldown/micro_circular_011.png	\
images/animations/micro_circular_cooldown/micro_circular_016.png	\
images/animations/micro_circular_cooldown/micro_circular_002.png	\
images/animations/micro_circular_cooldown/micro_circular_013.png	\
images/animations/micro_circular_cooldown/micro_circular_000.png	\
images/animations/micro_circular_cooldown/micro_circular_015.png	\
images/animations/micro_circular_cooldown/micro_circular_005.png	\
images/animations/volume_knob_leds/volume_led_32.png			\
images/animations/volume_knob_leds/volume_led_24.png			\
images/animations/volume_knob_leds/volume_led_25.png			\
images/animations/volume_knob_leds/volume_led_29.png			\
images/animations/volume_knob_leds/volume_led_43.png			\
images/animations/volume_knob_leds/volume_led_26.png			\
images/animations/volume_knob_leds/volume_led_27.png			\
images/animations/volume_knob_leds/volume_led_20.png			\
images/animations/volume_knob_leds/volume_led_31.png			\
images/animations/volume_knob_leds/volume_led_02.png			\
images/animations/volume_knob_leds/volume_led_35.png			\
images/animations/volume_knob_leds/volume_led_37.png			\
images/animations/volume_knob_leds/volume_led_41.png			\
images/animations/volume_knob_leds/volume_led_19.png			\
images/animations/volume_knob_leds/volume_led_28.png			\
images/animations/volume_knob_leds/volume_led_09.png			\
images/animations/volume_knob_leds/volume_led_17.png			\
images/animations/volume_knob_leds/volume_led_07.png			\
images/animations/volume_knob_leds/volume_led_01.png			\
images/animations/volume_knob_leds/volume_led_22.png			\
images/animations/volume_knob_leds/volume_led_30.png			\
images/animations/volume_knob_leds/volume_led_08.png			\
images/animations/volume_knob_leds/volume_led_06.png			\
images/animations/volume_knob_leds/volume_led_11.png			\
images/animations/volume_knob_leds/volume_led_14.png			\
images/animations/volume_knob_leds/volume_led_15.png			\
images/animations/volume_knob_leds/volume_led_10.png			\
images/animations/volume_knob_leds/volume_led_34.png			\
images/animations/volume_knob_leds/volume_led_42.png			\
images/animations/volume_knob_leds/volume_led_16.png			\
images/animations/volume_knob_leds/volume_led_39.png			\
images/animations/volume_knob_leds/volume_led_23.png			\
images/animations/volume_knob_leds/volume_led_03.png			\
images/animations/volume_knob_leds/volume_led_40.png			\
images/animations/volume_knob_leds/volume_led_45.png			\
images/animations/volume_knob_leds/volume_led_18.png			\
images/animations/volume_knob_leds/volume_led_21.png			\
images/animations/volume_knob_leds/volume_led_36.png			\
images/animations/volume_knob_leds/volume_led_33.png			\
images/animations/volume_knob_leds/volume_led_05.png			\
images/animations/volume_knob_leds/volume_led_38.png			\
images/animations/volume_knob_leds/volume_led_13.png			\
images/animations/volume_knob_leds/volume_led_04.png			\
images/animations/volume_knob_leds/volume_led_12.png			\
images/animations/volume_knob_leds/volume_led_44.png			\
images/animations/glowed_556_line/glowed_556_line_final.png		\
images/rooms/cellar/cellar_medium_bloom.png				\
images/rooms/cellar/cellar_small.png					\
images/rooms/cellar/cellar_medium.png					\
images/rooms/cellar/cellar_big.png					\
images/rooms/bathroom/bathroom_medium_bloom.png				\
images/rooms/bathroom/bathroom_small.png				\
images/rooms/bathroom/bathroom_medium.png				\
images/rooms/bathroom/bathroom_big.png					\
images/rooms/office/office_small.png					\
images/rooms/office/office_medium_bloom.png				\
images/rooms/office/office_medium.png					\
images/rooms/office/office_big.png					\
images/rooms/bedroom_small.png						\
images/rooms/lounge/lounge_medium.png					\
images/rooms/lounge/lounge_small.png					\
images/rooms/lounge/lounge_medium_bloom.png				\
images/rooms/lounge/lounge_big.png					\
images/rooms/bathroom_small.png						\
images/rooms/garage/garage_medium.png					\
images/rooms/garage/garage_big.png					\
images/rooms/garage/garage_medium_bloom.png				\
images/rooms/garage/garage_small.png					\
images/rooms/various/various_medium_bloom.png				\
images/rooms/various/various_big.png					\
images/rooms/various/various_medium.png					\
images/rooms/various/various_small.png					\
images/rooms/big_room_glow.png						\
images/rooms/diningroom_small.png					\
images/rooms/medium_room_neon.png					\
images/rooms/big_room_wire.png						\
images/rooms/diningroom/diningroom_small.png				\
images/rooms/diningroom/diningroom_big.png				\
images/rooms/diningroom/diningroom_medium.png				\
images/rooms/diningroom/diningroom_medium_bloom.png			\
images/rooms/small_room_shadow.png					\
images/rooms/medium_room_shadow.png					\
images/rooms/cellar_small.png						\
images/rooms/medium_room_glow.png					\
images/rooms/medium_room_touched.png					\
images/rooms/outside/outside_medium_bloom.png				\
images/rooms/outside/outside_big.png					\
images/rooms/outside/outside_small.png					\
images/rooms/outside/outside_medium.png					\
images/rooms/bedroom/bedroom_big.png					\
images/rooms/bedroom/bedroom_small.png					\
images/rooms/bedroom/bedroom_medium.png					\
images/rooms/bedroom/bedroom_medium_bloom.png				\
images/rooms/corridor/corridor_medium.png				\
images/rooms/corridor/corridor_big.png					\
images/rooms/corridor/corridor_medium_bloom.png				\
images/rooms/corridor/corridor_small.png				\
images/rooms/garage_small.png						\
images/rooms/corridor_small.png						\
images/rooms/kitchen/kitchen_medium_bloom.png				\
images/rooms/kitchen/kitchen_small.png					\
images/rooms/kitchen/kitchen_medium.png					\
images/rooms/kitchen/kitchen_big.png					\
images/rooms/big_room_shadow.png


EDC = \
calaos_theme.edc				\
elm/elm_genlist_item_internalstring.edc		\
elm/elm_ctxpopup.edc				\
elm/elm_genlist_item_internalbool.edc		\
elm/elm_calendar.edc				\
elm/elm_entry_keyboard.edc			\
elm/elm_list_base.edc				\
elm/elm_genlist_item_wovolet.edc		\
elm/elm_genlist_item_wovoletsmart.edc		\
elm/elm_genlist_item_woanalog.edc		\
elm/elm_button.edc				\
elm/elm_actionbutton.edc			\
elm/elm_list_homeboard.edc			\
elm/elm_genlist_item_wianalog.edc		\
elm/elm_genlist_item_simple.edc			\
elm/elm_genlist_item_scenario.edc		\
elm/elm_genlist_item_browser_album.edc		\
elm/elm_genlist_item_wodigital.edc		\
elm/elm_genlist_item_group_room.edc		\
elm/elm_genlist_item_wodalirvb.edc		\
elm/elm_genlist_item_internalint.edc		\
elm/elm_genlist_item_playlist.edc		\
elm/elm_pager.edc				\
elm/elm_genlist_item_wodali.edc			\
elm/elm_slider_knob.edc				\
elm/elm_list_home_room.edc			\
elm/elm_genlist_item_witemp.edc			\
elm/elm_genlist_item_scenario_schedule.edc	\
elm/elm_spinner.edc				\
structure/page_camera.edc			\
structure/room_prog_macro.edc			\
structure/page_config_panel.edc			\
structure/activity_header_footer.edc		\
structure/page_widgets.edc			\
structure/keyboard_macros.edc			\
structure/page_web.edc				\
structure/room_macro.edc			\
structure/main_layout.edc			\
structure/player_prog.edc			\
structure/styles.edc				\
structure/macro_menu_button.edc			\
structure/circular_spinner.edc			\
structure/page_scenarios.edc			\
structure/page_schedule.edc			\
structure/page_edit_scenario.edc		\
structure/main_menu.edc				\
structure/page_audio_list.edc			\
structure/popup_actions_pages.edc		\
structure/element_scenario_home.edc		\
structure/page_keyboard.edc			\
structure/player.edc				\
structure/slider_horizontal_macro.edc		\
structure/icons.edc				\
structure/utils.edc				\
structure/paging_view.edc			\
structure/slider_vertical_macro.edc		\
structure/rooms.edc				\
structure/page_home.edc				\
structure/activity_loading.edc			\
structure/scrolling_text.edc			\
structure/page_media.edc			\
structure/old_macros.edc			\
structure/slider.edc				\
structure/macro_round_button.edc		\
structure/amplifier_control.edc			\
structure/images.edc

FONT = \
fonts/calaos_logo.ttf				\
fonts/calaos_content.ttf			\
fonts/calaos_content-oblique.ttf		\
fonts/calaos_text_bold.ttf			\
fonts/Ubuntu-L.ttf				\
fonts/calaos_text.ttf				\
fonts/Ubuntu-M.ttf				\
fonts/calaos_content-bold.ttf			\
fonts/RepetitionScrolling.ttf			\
fonts/Ubuntu-B.ttf


EXTRA_DIST = \
  $(IMG) \
  $(EDC) \
  $(FONT)

default.edj: Makefile $(EXTRA_DIST)
	$(AM_V_GEN)$(EDJE_CC) $(EDJE_VERB) $(EDJE_FLAGS) \
	$(top_srcdir)/data/themes/default/calaos_theme.edc \
	$(top_builddir)/data/themes/default/default.edj

clean-local:
	rm -f *.edj

